# zeek-websocket

./: CMakeLists.txt  COPYING.edit-me  README  README.md  configure.plugin  demo_client.cpp  send_logs.zeek
ci/: lint.sh
cmake/: FindSimpleWebsocketServer.cmake
src/: Plugin.cc  Plugin.h  WebsocketWriter.cc  WebsocketWriter.cpp  WebsocketWriter.h  WebsocketWriter.hpp  websocket.bif
tests/: btest.cfg
tests/Baseline/websocket.show-plugin/: output
tests/websocket/: show-plugin.zeek
